# ceqa_watch

./: README.md  pyproject.toml
frontend/: app.py  ceqa_button.py  const.py  instructions.py  utils.py
notebooks/: CEQA Documents.csv  test_notebooks.ipynb
scrape/: __init__.py  const.py  data_processor.py  utils.py
